--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,4 +1,10 @@
 :root {
     --md-primary-fg-color:  #209020;
     --md-accent-fg-color:   #b61919;
-  }
+}
+
+[data-md-color-scheme="agic"] {
+    --md-primary-fg-color:        #EE0F0F;
+    --md-primary-fg-color--light: #ECB7B7;
+    --md-primary-fg-color--dark:  #90030C;
+}
